Visibility based preconditioner can now use multiple clustering algorithms.
TODO

1. Update commit message with more details and performance numbers.
2. Add tests for single linkage clustering.

Change-Id: I7ddc36790943f24b19c7f08b10694ae9a822f5c9

--- a/internal/ceres/CMakeLists.txt
+++ b/internal/ceres/CMakeLists.txt
@@ -91,6 +91,7 @@ SET(CERES_INTERNAL_SRC
     schur_eliminator.cc
     schur_jacobi_preconditioner.cc
     scratch_evaluate_preparer.cc
+    single_linkage_clustering.cc
     solver.cc
     solver_impl.cc
     sparse_matrix.cc
