Fixing CXSparse include directories statement.
- Reported as issue #135:
  https://code.google.com/p/ceres-solver/issues/detail?id=135.
- CXSPARSE_INCLUDE was the legacy include directory variable, since
  the buildsystem updates we now use the CMake standard:
  CXSPARSE_INCLUDE_DIRS.

Change-Id: Iab0c2de14d524bb9e9da230bc574b5e6f09e1f31

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -434,7 +434,7 @@ IF (SUITESPARSE)
 ENDIF (SUITESPARSE)
 
 IF (CXSPARSE)
-  INCLUDE_DIRECTORIES(${CXSPARSE_INCLUDE})
+  INCLUDE_DIRECTORIES(${CXSPARSE_INCLUDE_DIRS})
 ENDIF (CXSPARSE)
 
 IF (GFLAGS)
