Removing incorrect specialisation of install dirs on Windows.
- Previously on Windows the leaf include & lib install directories
  passed to CeresConfig.cmake.in when configured where capitalised on
  Windows.
- This capitalisation was incorrect, as the actual paths used are
  specified in the install() statements and are always in the standard
  lower-case form.
- This likely did not cause any issues previously as although NTFS is
  case sensitive, the Win32 API is not, and most applications access
  files through the Win32 API, and are thus not case-sensitive.

Change-Id: I335b6e2d10a1c64f320c2a1a68eeda1b22344e73

--- a/cmake/CeresConfig.cmake.in
+++ b/cmake/CeresConfig.cmake.in
@@ -108,7 +108,7 @@ ENDIF (NOT EXISTS ${CURRENT_ROOT_INSTALL_DIR})
 SET(CERES_VERSION @CERES_VERSION@ )
 
 # Set the include directories for Ceres (itself).
-SET(CERES_INCLUDE_DIR "${CURRENT_ROOT_INSTALL_DIR}/@INCLUDE_INSTALL_DIR@")
+SET(CERES_INCLUDE_DIR "${CURRENT_ROOT_INSTALL_DIR}/include")
 IF (NOT EXISTS ${CERES_INCLUDE_DIR}/ceres/ceres.h)
   CERES_REPORT_NOT_FOUND(
     "Ceres install root: ${CURRENT_ROOT_INSTALL_DIR}, "
