--- a/cmake/CeresConfig.cmake.in
+++ b/cmake/CeresConfig.cmake.in
@@ -77,7 +77,8 @@ MACRO(CERES_REPORT_NOT_FOUND REASON_MSG)
 ENDMACRO(CERES_REPORT_NOT_FOUND)
 
 # Get the (current, i.e. installed) directory containing this file.
-SET(CURRENT_CONFIG_INSTALL_DIR ${CMAKE_CURRENT_LIST_DIR})
+GET_FILENAME_COMPONENT(CURRENT_CONFIG_INSTALL_DIR
+  "${CMAKE_CURRENT_LIST_FILE}" PATH)
 
 # Record the state of the CMake module path when this script was called so
 # that we can ensure that we leave it in the same state on exit as it was
