Adding threads libraries to exported dependencies if using OpenMP.
- Previously we were only adding the flags to the link flags for the
  Ceres project, which resulted in them not being exported. Thus
  projects importing Ceres (if using OpenMP) would have to manually
  specify them in addition to CERES_LIBRARIES.

Change-Id: If0354cc07e84dbebfc870a8862e1a8ca64659791

--- a/internal/ceres/CMakeLists.txt
+++ b/internal/ceres/CMakeLists.txt
@@ -161,6 +161,7 @@ ENDIF (BLAS_FOUND AND LAPACK_FOUND)
 IF (OPENMP_FOUND)
   IF (NOT MSVC)
     LIST(APPEND CERES_LIBRARY_DEPENDENCIES gomp)
+    LIST(APPEND CERES_LIBRARY_DEPENDENCIES ${CMAKE_THREAD_LIBS_INIT})
   ENDIF (NOT MSVC)
 ENDIF (OPENMP_FOUND)
 
