General first order minimizer.
Use the line search minimizer to solve general
first order problems.

A new FirstOrderProblem interface and a Solve function
is added.
Change-Id: I8a151332f0eb11612dfd316411b90ce1d69c55ae

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -40,6 +40,9 @@ TARGET_LINK_LIBRARIES(helloworld_analytic_diff ceres)
 ADD_EXECUTABLE(curve_fitting curve_fitting.cc)
 TARGET_LINK_LIBRARIES(curve_fitting ceres)
 
+ADD_EXECUTABLE(first_order_problem_example first_order_problem_example.cc)
+TARGET_LINK_LIBRARIES(first_order_problem_example ceres)
+
 ADD_EXECUTABLE(curve_fitting_c curve_fitting.c)
 TARGET_LINK_LIBRARIES(curve_fitting_c ceres)
 # As this is a C file #including <math.h> we have to explicitly add the math
@@ -80,4 +83,3 @@ IF (GFLAGS)
                  fields_of_experts.cc)
   TARGET_LINK_LIBRARIES(denoising ceres ${GFLAGS_LIBRARIES})
 ENDIF (GFLAGS)
-
