Gradient based general nonlinear optimization.
1. Add a GradientProblem interface.
2. Add the ability to solve a GradientProblem
   using the line search minimizer.

Change-Id: I8a151332f0eb11612dfd316411b90ce1d69c55ae

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -40,6 +40,9 @@ TARGET_LINK_LIBRARIES(helloworld_analytic_diff ceres)
 ADD_EXECUTABLE(curve_fitting curve_fitting.cc)
 TARGET_LINK_LIBRARIES(curve_fitting ceres)
 
+ADD_EXECUTABLE(rosenbrock rosenbrock.cc)
+TARGET_LINK_LIBRARIES(rosenbrock ceres)
+
 ADD_EXECUTABLE(curve_fitting_c curve_fitting.c)
 TARGET_LINK_LIBRARIES(curve_fitting_c ceres)
 # As this is a C file #including <math.h> we have to explicitly add the math
