Add ceres::experimental::ConstrainedProblem which constructs an AugmentedLagrangian as constraints are added to the problem.
Change-Id: I67fe25d33aaf64b732d80f69bd67242ce118f1d2

--- a/internal/ceres/CMakeLists.txt
+++ b/internal/ceres/CMakeLists.txt
@@ -49,6 +49,8 @@ SET(CERES_INTERNAL_SRC
     compressed_row_sparse_matrix.cc
     conditioned_cost_function.cc
     conjugate_gradients_solver.cc
+    constrained_problem.cc
+    constrained_solver.cc
     coordinate_descent_minimizer.cc
     corrector.cc
     covariance.cc
