Add Dynamic Sparse Normal Cholesky Solver
The standard sparse normal Cholesky solver assumes a fixed sparsity pattern
which is useful for a large number of problems presented to Ceres. However,
some problems are symbolically dense but numerically sparse i.e. each residual
is a function of a large number of parameters but at any given state the
residual only depends on a sparse subset of them. For these class of problems
it is faster to re-analyse the sparsity pattern of the jacobian at each
iteration of the non-linear optimisation instead of including all of the zero
entries in the step computation.

The proposed solution adds the DYNAMIC_SPARSE_NORMAL_CHOLESKY linear solver
type which can be used in place of SPARSE_NORMAL_CHOLESKY. A
`DynamicCompressedRowSparseMatrix` type (which extends
`CompressedRowSparseMatrix`) has been introduced which allows dynamic addition
and removal of elements. A `Finalize` method is provided which then
consolidates the matrix so that it can be used in place of a regular
`CompressedRowSparseMatrix`. An associated jacobian writer has also been
provided.

Changes that were required to make this extension were changing
`CompressedRowSparseMatrix`'s members from private to protected and adding a
`JacobianFinalizer` template parameter to the `ProgramEvaluator`.

Change-Id: Ia5a8a9523fdae8d5b027bc35e70b4611ec2a8d01

--- a/internal/ceres/CMakeLists.txt
+++ b/internal/ceres/CMakeLists.txt
@@ -59,6 +59,9 @@ SET(CERES_INTERNAL_SRC
     dense_sparse_matrix.cc
     detect_structure.cc
     dogleg_strategy.cc
+    dynamic_compressed_row_jacobian_writer.cc
+    dynamic_compressed_row_sparse_matrix.cc
+    dynamic_sparse_normal_cholesky_solver.cc
     evaluator.cc
     file.cc
     gradient_checking_cost_function.cc
