Gradient based general nonlinear optimization.
1. Add a GradientProblem interface.
2. Add the ability to solve a GradientProblem
   using the line search minimizer.
3. Add LocalParameterization::MultiplyByJacobian.

Change-Id: I6774f14f8fb444abd2b65f6b415563f8a38bd3ff

--- a/internal/ceres/CMakeLists.txt
+++ b/internal/ceres/CMakeLists.txt
@@ -63,6 +63,7 @@ SET(CERES_INTERNAL_SRC
     evaluator.cc
     file.cc
     gradient_checking_cost_function.cc
+    gradient_problem.cc
     implicit_schur_complement.cc
     incomplete_lq_factorization.cc
     iterative_schur_complement_solver.cc
