Solver::Options uses shared_ptr to handle ownership.
Solver::Options::linear_solver_ordering and Solver::Options::inner_iteration_ordering
were bare pointers even though Solver::Options took ownership of these objects.

This lead to buggy user code and the inability to copy Solver::Options objects around.

With this change, these naked pointers have been replaced by a shared_ptr object
which will managed the lifetime of these objects. This also leads to simplification
of the lifetime handling of these objects inside the solver.

Change-Id: I25161fb3ddf737be0b3e5dfd8e7a0039b22548cd

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -406,20 +406,20 @@ IF (HAVE_STD_UNORDERED_MAP_HEADER)
 
   INCLUDE(CheckCXXSourceCompiles)
   CHECK_CXX_SOURCE_COMPILES("#include <unordered_map>
-                            int main() {
-                              std::unordered_map<int, int> map;
-                              return 0;
-                            }"
+                             int main() {
+                               std::unordered_map<int, int> map;
+                               return 0;
+                             }"
                             HAVE_UNORDERED_MAP_IN_STD_NAMESPACE)
   IF (HAVE_UNORDERED_MAP_IN_STD_NAMESPACE)
     ADD_DEFINITIONS(-DCERES_STD_UNORDERED_MAP)
     MESSAGE("-- Found unordered_map/set in std namespace.")
   ELSE (HAVE_UNORDERED_MAP_IN_STD_NAMESPACE)
     CHECK_CXX_SOURCE_COMPILES("#include <unordered_map>
-                              int main() {
-                                std::tr1::unordered_map<int, int> map;
-                                return 0;
-                              }"
+                               int main() {
+                                 std::tr1::unordered_map<int, int> map;
+                                 return 0;
+                               }"
                               HAVE_UNORDERED_MAP_IN_TR1_NAMESPACE)
     IF (HAVE_UNORDERED_MAP_IN_TR1_NAMESPACE)
       ADD_DEFINITIONS(-DCERES_STD_UNORDERED_MAP_IN_TR1_NAMESPACE)
@@ -432,16 +432,63 @@ IF (HAVE_STD_UNORDERED_MAP_HEADER)
     ENDIF (HAVE_UNORDERED_MAP_IN_TR1_NAMESPACE)
   ENDIF (HAVE_UNORDERED_MAP_IN_STD_NAMESPACE)
 ELSE (HAVE_STD_UNORDERED_MAP_HEADER)
-  CHECK_INCLUDE_FILE_CXX("tr1/unordered_map" UNORDERED_MAP_IN_TR1_NAMESPACE)
-  IF (UNORDERED_MAP_IN_TR1_NAMESPACE)
+  CHECK_INCLUDE_FILE_CXX("tr1/unordered_map" HAVE_TR1_UNORDERED_MAP_HEADER)
+  IF (HAVE_TR1_UNORDERED_MAP_HEADER)
     ADD_DEFINITIONS(-DCERES_TR1_UNORDERED_MAP)
     MESSAGE("-- Found tr1/unordered_map/set in std::tr1 namespace.")
-  ELSE (UNORDERED_MAP_IN_TR1_NAMESPACE)
+  ELSE (HAVE_TR1_UNORDERED_MAP_HEADE)
     MESSAGE("-- Unable to find <unordered_map> or <tr1/unordered_map>. ")
     MESSAGE("-- Replacing unordered_map/set with map/set (warning: slower!)")
     ADD_DEFINITIONS(-DCERES_NO_UNORDERED_MAP)
-  ENDIF (UNORDERED_MAP_IN_TR1_NAMESPACE)
+  ENDIF (HAVE_TR1_UNORDERED_MAP_HEADER)
 ENDIF (HAVE_STD_UNORDERED_MAP_HEADER)
+
+CHECK_INCLUDE_FILE_CXX(memory HAVE_STD_MEMORY_HEADER)
+IF (HAVE_STD_MEMORY_HEADER)
+  # Even so we've found memory header file it doesn't mean shared_ptr
+  # will be declared in std namespace.
+  #
+  # Namely, MSVC 2008 have memory header which declares shared_ptr
+  # class in std::tr1 namespace. In order to support this, we do extra
+  # check to see which exactly namespace is to be used.
+
+  INCLUDE(CheckCXXSourceCompiles)
+  CHECK_CXX_SOURCE_COMPILES("#include <memory>
+                             int main() {
+                               std::shared_ptr<int> int_ptr;
+                               return 0;
+                             }"
+                            HAVE_SHARED_PTR_IN_STD_NAMESPACE)
+
+  IF (HAVE_SHARED_PTR_IN_STD_NAMESPACE)
+    ADD_DEFINITIONS(-DCERES_STD_SHARED_PTR)
+    MESSAGE("-- Found shared_ptr in std namespace.")
+  ELSE (HAVE_SHARED_PTR_IN_STD_NAMESPACE)
+    CHECK_CXX_SOURCE_COMPILES("#include <memory>
+                               int main() {
+                                 std::tr1::shared_ptr<int> int_ptr;
+                                 return 0;
+                               }"
+                              HAVE_SHARED_PTR_IN_TR1_NAMESPACE)
+    IF (HAVE_SHARED_PTR_IN_TR1_NAMESPACE)
+      ADD_DEFINITIONS(-DCERES_STD_SHARED_PTR_IN_TR1_NAMESPACE)
+      MESSAGE("-- Found shared_ptr in std::tr1 namespace.")
+    ELSE (HAVE_SHARED_PTR_IN_TR1_NAMESPACE)
+      MESSAGE(FATAL_ERROR "-- Found <memory> but cannot find either "
+                          "std::shared_ptr or std::tr1::shared_ptr")
+      ADD_DEFINITIONS(-DCERES_NO_SHARED_PTR)
+    ENDIF (HAVE_SHARED_PTR_IN_TR1_NAMESPACE)
+  ENDIF (HAVE_SHARED_PTR_IN_STD_NAMESPACE)
+ELSE (HAVE_STD_MEMORY_HEADER)
+  CHECK_INCLUDE_FILE_CXX("tr1/memory" HAVE_TR1_MEMORY_HEADER)
+  IF (HAVE_TR1_MEMORY_HEADER)
+    ADD_DEFINITIONS(-DCERES_TR1_SHARED_PTR)
+    MESSAGE("-- Found tr1/memory in std::tr1 namespace.")
+  ELSE (HAVE_TR1_MEMORY_HEADER)
+    MESSAGE(FATAL_ERROR "-- Unable to find <memory> or <tr1/memory>. ")
+  ENDIF (HAVE_TR1_MEMORY_HEADER)
+ENDIF (HAVE_STD_MEMORY_HEADER)
+
 
 INCLUDE_DIRECTORIES(
   include
